Adding A Upload Photo Function

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,3 +1,4 @@
 
 	<%= @picture.title  %>
 	<%= @picture.description %>
+	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
