--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -2,15 +2,6 @@
 <h1>Picture Upload</h1>
 
 
-  <%= form_for @picture, :html => {:multipart => true} do |f| %>
+  <%= render 'form' %>
 
-      <%= f.label :title %>
-      <%= f.text_field :title %>
 
-      <%= f.label :description %>
-      <%= f.text_field :description %>
-
-      <%= f.file_field :image %>
-
-      <%= f.submit "Upload Picture", class: "btn btn-large btn-primary" %>
-    <% end %>
