--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,4 +1,9 @@
+<p id="notice"><%= notice %></p>
 
 	<%= @picture.title  %>
 	<%= @picture.description %>
 	<%= image_tag(@picture.image_url, :width => 200) if @picture.image.present? %>
+
+	<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
+      <%= link_to 'Verwijderen', @picture, confirm: 'Weet je het zeker?', method: :delete %> |
+      <%= link_to 'Terug', pictures_path %>
