--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,9 +1,9 @@
+<h1>Kunst Uploaden</h1>
+<%= link_to 'Klik om kunst te uploaden', new_picture_path %></br>
 <% @pictures.each do |picture| %>
 	<tr>
-		<td ><%= picture.title  %></td>
+		<td ><%= link_to picture.title, picture  %></td>
 		<td ><%= picture.description  %></td>
-		<td> <%= image_tag(picture.image_url, :width => 200) if picture.image.present? %></td>
+		<td> <%= link_to image_tag(picture.image_url, :width => 200) , picture if picture.image.present?  %></td>
 	</tr>
 <%  end %>
-
-hoi
