adding some javascript code that previews an uploaded image

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,6 +32,9 @@ body
       float: left
       border: 1px solid grey
       background-image: url('add-art.png')
+      img
+        width: 150px
+        height: 200px
     .error
       display: inline-block
       float: left
