--- a/app/views/pictures/_form.html.haml
+++ b/app/views/pictures/_form.html.haml
@@ -6,7 +6,7 @@
     #attend-button
       #container-add-art
         = f.file_field :image
-        %img(id='prev_img' src='#')
+        %img(id='prev_img' src='')
 
     .field
       %label{:for => "title-art"} 
