Added a bit of styling to the feedback

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,9 +8,10 @@ $lighter-grey: #E9E9E9
 $lime-green: #67F784
 $dark-green: #38EA6D
 
-.error
-  background-color: #ff0000
-  color: #fff
+.field_with_errors
+  input
+    background-color: #ff0000
+    color: #fff
 
 .succes
   background: #00ff06
