--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,8 +10,7 @@ $dark-green: #38EA6D
 
 .field_with_errors
   input
-    background-color: #ff0000
-    color: #fff
+    border: 2px solid #ff0000!important
 
 .succes
   background: #00ff06
