--- a/app/views/pictures/_form.html.haml
+++ b/app/views/pictures/_form.html.haml
@@ -4,7 +4,8 @@
     
   = form_for @picture, :html => {:multipart => true} do |f|
     #attend-button
-      #container-add-art
+      %span Afbeelding
+      #container-add-art 
         %img(id='prev_img' src='')
         = f.file_field :image
 
@@ -15,21 +16,6 @@
       = f.text_field :title, :placeholder => 'Voer titel in'
 
       %label{:for => "story-art"} 
-        %span Omschrijving
-        van uw kunst
+        %span Omschrijving van uw kunst
       = f.text_area :description, :placeholder => 'Voer beschrijving in'
-
       = f.submit "Doe mee", :id => "btn"
-
-:javascript
-  var $input = $('#container-add-art input');
-  $input.on('change', function(){
-    var input = $input[0];
-    if (input.files && input.files[0]) {
-      var reader = new FileReader();
-      reader.onload = function(evt) {
-        $('#prev_img').attr('src', evt.target.result);
-      };
-      reader.readAsDataURL(input.files[0]);
-    }
-  });
