Focus now overrules .fieldwitherrors

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -13,12 +13,6 @@ $lighter-grey: #E9E9E9
 $lime-green: #67F784
 $dark-green: #38EA6D
 
-.field_with_errors
-  @extend %fadeIn
-  @include animation-duration( 2s )
-  input, textarea
-    border: 2px solid #ff0000!important
-
 .succes
   background: #00ff06
   color: #fff
@@ -54,8 +48,6 @@ div, input, textarea
       border: 2px solid $lighter-grey
       background-repeat: no-repeat
       position: relative
-      #menu 
-        display: none
       .field_with_errors
         float: left
         margin: -2px
@@ -68,12 +60,6 @@ div, input, textarea
         left: 0
         height: 175px
         width: 125px
-    .error
-      display: inline-block
-      float: left
-      clear: both
-      padding: 10px
-
 
   form
     display: inline-block
@@ -85,6 +71,11 @@ div, input, textarea
   .field
     float: left
     width: 40%
+    .field_with_errors
+      @extend %fadeIn
+      @include animation-duration( 2s )
+      input, textarea
+        border: 2px solid #ff0000
     input, textarea
       clear: both
       float: left
