--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,4 +1,6 @@
 @import "compass/css3"
+@import "compass/css3/box-sizing"
+
 @import "companimation"
 @import "companimation/preset/fade/fadeIn"
 @import "companimation/preset/fade/fadeInUp"
@@ -43,7 +45,7 @@ div, input, textarea
     float: left
     #container-add-art
       float: left
-      width: 129px
+      width: 125px
       background-image: url('add-art.png')
       border: 2px solid $lighter-grey
       background-repeat: no-repeat
@@ -83,6 +85,7 @@ div, input, textarea
       padding: 10px
       margin-bottom: 25px
       border: 2px solid $lighter-grey
+      @include box-sizing(border-box)
       &:focus
         border: 2px solid $dark-green
         outline: 0
