--- a/app/views/pictures/_form.html.haml
+++ b/app/views/pictures/_form.html.haml
@@ -9,7 +9,7 @@
         %img(id='prev_img' src='')
         = f.file_field :image
         = f.hidden_field :image_cache, :value => @picture.image_cache
-        = image_tag(@picture.image_url, :width => 200)
+        = image_tag(@picture.image_url, :width => 200, :id => "img_cache")
 
     .field
       %label{:for => "title-art"} 
