--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -5,5 +5,7 @@
 		<td ><%= link_to picture.title, picture  %></td>
 		<td ><%= picture.description  %></td>
 		<td> <%= link_to image_tag(picture.image_url, :width => 200) , picture if picture.image.present?  %></td>
+		<td> <%= pluralize(picture.votes.count, "vote" ) %>  </td>
+		<td> <%= button_to '+1', upvote_picture_path(picture), method: :post %>  </td>
 	</tr>
 <%  end %>
