--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -4,8 +4,7 @@
 	<tr>
 		<td ><%= link_to picture.title, picture  %></td>
 		<td ><%= picture.description  %></td>
-		<td> <%= link_to image_tag(picture.image_url, :width => 200) , picture if picture.image.present?  %></td>
-		<td> <%= pluralize(picture.votes.count, "vote" ) %>  </td>
-		<td> <%= button_to '+1', upvote_picture_path(picture), method: :post %>  </td>
+		<td> <%= link_to image_tag(picture.image_url, :height => 180, :width => 200) , picture if picture.image.present?  %></td>
+		<td> <%= link_to 'Vote', upvote_picture_path(picture), :remote => true, "data-type" => :json  %>  </td>
 	</tr>
 <%  end %>
