Added front-end and interaction to vote system, small bug live

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -104,3 +104,62 @@ div, input, textarea
 
     textarea
       height: 150px
+
+#container-vote
+  padding: 20px
+  width: 80px
+  margin: 0 auto
+  background: $light-grey
+  border: 5px solid $dark-green
+  cursor: pointer
+
+.vote
+  float: left
+  clear: both
+  margin: 30px
+  padding: 20px
+  background-color: $light-grey
+
+
+#container-art-bg
+  display: inline-block
+  position: absolute
+  z-index: 1
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  background-color: rgba(0, 0, 0, 0.5)
+
+#container-art
+  position: relative
+  z-index: 2
+  padding: 20px
+  background-color: $lime-green
+  width: 835px
+  height: 395px
+  margin: 0 auto
+  overflow: hidden
+  h1
+    width: 100%
+    text-align: center
+  .art
+    position: relative
+    float: left
+    margin: 15px 15px 25px 15px
+    width: 29%
+    a
+      width: 100%
+      text-align: center
+      display: inline-block
+      color: #fff
+      text-decoration: none
+    img
+      border: 5px solid $lime-green
+      float: left
+      cursor: pointer
+      width: 225px
+      height: 250px
+  .the-one
+    float: left
+    border: 5px solid $light-grey!important
