--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,17 @@
           = image_tag 'logo.png'
       #menu
         %a{:href => "/"}Menu +
+        %ul
+          %li 
+            %a{:href => "/"}Join appSYNTH
+          %li 
+            %a{:href => "/"}Wedstrijd aanmaken
+          %li 
+            %a{:href => "/"}Sponsoren
+          %li 
+            %a{:href => "/"}Contact opnemen
+          %li 
+            %a{:href => "/"}Menu sluiten
       #register
         %a{:href => "/"}Registreren
       #twitter
