--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,7 +1,5 @@
 // Imports
 @import "compass/css3"
-@import "compass/css3/box-sizing"
-@import "compass/css3/box-shadow"
 @import "compass/reset"
 
 @import "companimation"
@@ -9,6 +7,7 @@
 @import "companimation/preset/fade/fadeInUp"
 @import "companimation/preset/bounce/bounceIn"
 @import "companimation/preset/filters/blurInDown"
+
 // Stuff
 div
   @include box-sizing(border-box)
@@ -25,6 +24,7 @@ div
 // Variables
 $black:         #000000
 $white:         #FFFFFF
+$darkest-grey:  #999999
 $dark-grey:     #D0D0D0
 $light-grey:    #F7F7F7
 $grey:          #E9E9E9
@@ -40,7 +40,41 @@ div, input, textarea
   @include border5px
   border: none
 
+#container-content
+  padding: 0px 90px
+
+.item
+  width: 24%
+  margin-right: 1%
+
+  border-right: 1px solid $grey
+  border-bottom: 1px solid $grey
+  h2
+    display: inline-block
+    float: left
+    padding: 30px 20px
+  &>img
+    width: 100%
+  span
+    @include box-sizing(border-box)
+    padding: 30px 30px
+    float: right
+    width: 70px
+    height: 50px
+    border-left: 1px solid $grey
+
+#bg-overlay
+  background: rgba(153, 153, 153, 0.5)
+  position: absolute
+  top: 0
+  left: 0
+  z-index: 1
+  width: 100%
+  height: 100%
+
 #header
+  position: relative
+  z-index: 2
   font-size: 0.9em
   background: $white
   border-bottom: 1px solid $dark-grey
@@ -53,6 +87,7 @@ div, input, textarea
     height: 50px
     min-width: 55px
     padding: 25px 20px
+    position: relative
   a
     color: $black
     text-decoration: none
@@ -91,8 +126,31 @@ div, input, textarea
   #login
     border-right: 1px solid $grey
     background: url(icon-login.png) no-repeat 15px 22px
-    a
+    button
+      padding: 20px
+      background: $darkest-grey
+      float: right
+      color: $white
+      border: none
+      margin-top: -15px
+    &>a
+      height: 46px
+      display: inline-block
       padding-left: 37px
+    input
+      font-style: italic
+      border: 1px solid $grey
+      padding: 20px
+      margin-bottom: 30px
+      margin-top: 15px
+      width: 100%
+      @include box-sizing(border-box)
+    ul
+      @include box-sizing(border-box)
+      background: $white
+      width: 350px
+      padding: 20px
+      position: absolute
   #facebook
     border-right: 1px solid $grey
   #twitter
