--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,8 +4,9 @@
     %title Wisemonkeys
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     // %link{href: "http://fonts.googleapis.com/css?family=Muli:400,300italic", rel: "stylesheet", type: "text/css"}/
-    = javascript_include_tag "application", "data-turbolinks-track" => true
     = javascript_include_tag "masonry.pkgd.js", "data-turbolinks-track" => true
+    = javascript_include_tag "imagesloaded.pkgd.js", "data-turbolinks-track" => true
+    = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
     #bg-overlay
