--- a/app/views/competitions/index.html.haml
+++ b/app/views/competitions/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing competitions
+%h1 Wedstrijden
 
 %table
   %tr
@@ -22,4 +22,4 @@
 
 %br
 
-= link_to 'New Competition', new_competition_path
+= link_to 'Nieuwe wedstrijd aanmaken', new_competition_path
