fixing so that rspec tests pass

--- a/app/views/competitions/_form.html.haml
+++ b/app/views/competitions/_form.html.haml
@@ -17,6 +17,6 @@
     = f.text_field :prize
   .field
     = f.label :deadline
-    = f.datetime_select :deadline
+    = f.text_field :deadline
   .actions
-    = f.submit 'Save'
+    = f.submit 'Wedstrijd aanmaken'
