--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,4 +6,4 @@
 
 	<%= link_to 'Bewerken', edit_picture_path(@picture) %> |
       <%= link_to 'Verwijderen', @picture, confirm: 'Weet je het zeker?', method: :delete %> |
-      <%= link_to 'Terug', pictures_path %>
+      <%= link_to 'Terug', :back %>
