--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -13,6 +13,8 @@
   %b Deadline:
   = @competition.deadline
 
+= link_to 'Klik om mee te doen!', new_picture_path
+
 = link_to 'Edit', edit_competition_path(@competition)
 \|
 = link_to 'Back', competitions_path
