--- a/app/views/competitions/show.html.haml
+++ b/app/views/competitions/show.html.haml
@@ -12,8 +12,12 @@
 %p
   %b Deadline:
   = @competition.deadline
+%p
+  - @competition.pictures.each do |picture|
+    = picture.title
+    = image_tag(picture.image_url, :width => 200)
 
-= link_to 'Klik om mee te doen!', new_picture_path
+= link_to 'Klik om mee te doen!', new_picture_path(:competition_id => @competition)
 
 = link_to 'Edit', edit_competition_path(@competition)
 \|
