--- a/app/views/pictures/_form.html.haml
+++ b/app/views/pictures/_form.html.haml
@@ -21,4 +21,5 @@
       %label{:for => "story-art"} 
         %span Omschrijving van uw kunst
       = f.text_area :description, :placeholder => 'Voer beschrijving in'
+      = f.hidden_field :competition_id
       = f.submit "Doe mee", :id => "btn"
