--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,7 +9,7 @@
 @import "companimation/preset/filters/blurInDown"
 
 // Stuff
-div
+div, a
   @include box-sizing(border-box)
 
 // Mixins
@@ -32,6 +32,11 @@ $lime-green:    #67F784
 $dark-green:    #38EA6D
 
 // General stuff
+
+h1
+  font-size: 2em
+  padding-bottom: 30px
+
 body,html
   font-family: 'Muli', sans-serif
   background: $light-grey
@@ -41,26 +46,43 @@ div, input, textarea
   border: none
 
 #container-content
-  padding: 0px 90px
+  padding: 30px 90px
+  margin-top: 70px
 
 .item
   width: 24%
+  margin-bottom: 10px
   margin-right: 1%
-  border-right: 1px solid $grey
-  border-bottom: 1px solid $grey
-  h2
+  border-right: 1px solid $dark-grey
+  border-bottom: 1px solid $dark-grey
+  a img
+    width: 100%
+  .art-name
+    font-size: 1.5em
     display: inline-block
     float: left
     padding: 30px 20px
-  &>img
-    width: 100%
+    text-decoration: none
+    color: $black
+    width: 80%
+    &:hover
+      color: $lime-green
   span
     @include box-sizing(border-box)
-    padding: 30px 30px
+    padding: 30px 3px
+    text-align: center
     float: right
-    width: 70px
+    width: 20%
     height: 50px
-    border-left: 1px solid $grey
+    border-left: 1px solid $dark-grey
+    p
+      background: $lime-green
+      display: inline-block
+      border-radius: 50px
+      padding-top: 7px
+      height: 23px
+      width: 30px
+      color: $white      
 
 #bg-overlay
   background: rgba(153, 153, 153, 0.5)
@@ -72,8 +94,9 @@ div, input, textarea
   height: 100%
 
 #header
-  position: relative
+  position: fixed
   z-index: 2
+  top: 0
   font-size: 0.9em
   background: $white
   border-bottom: 1px solid $dark-grey
@@ -91,6 +114,7 @@ div, input, textarea
     color: $black
     text-decoration: none
   #logo
+    padding-left: 0px
     float: left
     margin-right: 120px
   #menu
