--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,6 +33,24 @@ $dark-green:    #38EA6D
 
 // General stuff
 
+#match-info
+  margin-bottom: 30px
+
+.start-match
+  th
+    margin-right: 30px
+    width: 150px
+
+.edit-match
+  .field
+    padding: 20px
+  input
+    padding: 20px
+    border: 1px solid $dark-grey
+  label 
+    width: 150px
+    display: inline-block
+
 h1
   font-size: 2em
   padding-bottom: 30px
@@ -49,10 +67,14 @@ div, input, textarea
   padding: 30px 90px
   margin-top: 70px
 
+.item:nth-child(3n+3)
+  margin-right: 0%
+  width: 30%
+
 .item
-  width: 24%
+  width: 30%
   margin-bottom: 10px
-  margin-right: 1%
+  margin-right: 3%
   border-right: 1px solid $dark-grey
   border-bottom: 1px solid $dark-grey
   a img
