--- a/app/views/competitions/_form.html.haml
+++ b/app/views/competitions/_form.html.haml
@@ -1,22 +1,23 @@
-= form_for @competition do |f|
-  - if @competition.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@competition.errors.count, "error")} prohibited this competition from being saved:"
-      %ul
-        - @competition.errors.full_messages.each do |msg|
-          %li= msg
+.edit-match 
+  = form_for @competition do |f|
+    - if @competition.errors.any?
+      #error_explanation
+        %h2= "#{pluralize(@competition.errors.count, "error")} prohibited this competition from being saved:"
+        %ul
+          - @competition.errors.full_messages.each do |msg|
+            %li= msg
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :description
-    = f.text_field :description
-  .field
-    = f.label :prize
-    = f.text_field :prize
-  .field
-    = f.label :deadline
-    = f.text_field :deadline
-  .actions
-    = f.submit 'Wedstrijd aanmaken'
+    .field
+      = f.label :title
+      = f.text_field :title
+    .field
+      = f.label :description
+      = f.text_field :description
+    .field
+      = f.label :prize
+      = f.text_field :prize
+    .field
+      = f.label :deadline
+      = f.text_field :deadline
+    .actions
+      = f.submit 'Wedstrijd aanmaken'
