Did some styling

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,7 @@
   %head
     %title Wisemonkeys
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
-    %link{href: "http://fonts.googleapis.com/css?family=Muli:400,300italic", rel: "stylesheet", type: "text/css"}/
+    // %link{href: "http://fonts.googleapis.com/css?family=Muli:400,300italic", rel: "stylesheet", type: "text/css"}/
     = javascript_include_tag "masonry.pkgd.js", "data-turbolinks-track" => true
     = javascript_include_tag "imagesloaded.pkgd.js", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
