--- a/app/views/pictures/index.html.haml
+++ b/app/views/pictures/index.html.haml
@@ -15,16 +15,13 @@
   -# #container-thanks
     -# %p Bedankt voor het stemmen
 
-  -# %h1 Kies één
-  -# - @pictures.shuffle.each do |picture|
-    -# .art 
-      -# = link_to picture.title, picture
-      // = picture.description
-      // = image_tag(picture.image_url, :width => 200)
-      // , picture if picture.image.present?
-      // = pluralize(picture.votes.count, "vote" )
-      // = button_to '+1', upvote_picture_path(picture), method: :post
-      // = link_to 'Vote', upvote_picture_path(picture), :remote => true, "data-type" => :json
+%h1 Kies één
+- @pictures.shuffle.each do |picture|
+  .art 
+    = link_to picture.title, picture
+    = picture.description
+    = image_tag(picture.image_url, :width => 200)
+    = pluralize(picture.votes.count, "vote" )
+    = link_to 'Vote', upvote_picture_path(picture), :remote => true, "data-type" => :json
 
-      -# = link_to upvote_picture_path(picture), :remote => true, "data-type" => :json do
-        -# = image_tag(picture.image_url, :width => 200)
+      
