--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -35,6 +35,17 @@ $dark-green:    #38EA6D
 
 #match-info
   margin-bottom: 30px
+  width: 100%
+  display: inline-block
+  div:first-child
+    float: left
+
+#btn-vote
+  float: right
+  padding: 30px
+  background: $lime-green
+  color: $white
+  cursor: pointer
 
 .start-match
   th
@@ -67,14 +78,9 @@ div, input, textarea
   padding: 30px 90px
   margin-top: 70px
 
-.item:nth-child(1n+1)
-  margin-right: 0%
-  width: 30%
-
 .item
-  width: 25%
+  width: 19%
   margin-bottom: 10px
-  margin-right: 3%
   border-right: 1px solid $dark-grey
   border-bottom: 1px solid $dark-grey
   a img
@@ -168,6 +174,8 @@ div, input, textarea
           background: url(icon-close.png) no-repeat 275px 32px
   #login, #register, #facebook, #twitter
     float: right
+  #register
+    padding-right: 0px
   #login
     border-right: 1px solid $grey
     background: url(icon-login.png) no-repeat 15px 22px
@@ -288,11 +296,22 @@ div, input, textarea
   margin: 30px
   padding: 20px
   background-color: $light-grey
+ 
+/* The ghost, nudged to maintain perfect centering */
+#container-art-bg:before
+  content: ''
+  display: inline-block
+  height: 100%
+  vertical-align: middle
+  margin-right: -0.25em /* Adjusts for spacing */
 
+/* The element to be centered, can
+   also be of any width and height */ 
 
 #container-art-bg
+  text-align: center
   display: inline-block
-  position: absolute
+  position: fixed
   z-index: 1
   top: 0
   left: 0
@@ -300,35 +319,41 @@ div, input, textarea
   height: 100%
   background-color: rgba(0, 0, 0, 0.5)
 
-#container-art
-  position: relative
-  z-index: 2
-  padding: 20px
-  background-color: $lime-green
-  width: 835px
-  height: 395px
-  margin: 0 auto
-  overflow: hidden
-  h1
-    width: 100%
-    text-align: center
-  .art
-    position: relative
-    float: left
-    margin: 15px 15px 25px 15px
-    width: 29%
-    a
+  #container-art
+    width: 50%
+    left: 0
+    right: 0
+    margin: 0 auto
+    z-index: 2
+    padding: 20px
+    background-color: $white
+    height: 395px 
+    overflow: hidden
+    display: inline-block
+    vertical-align: middle
+    h1
       width: 100%
       text-align: center
-      display: inline-block
-      color: #fff
-      text-decoration: none
-    img
-      border: 5px solid $lime-green
+    .art
+      margin-right: 2%
+      margin-left: 2%
+      margin-bottom: 20%
+      position: relative
       float: left
-      cursor: pointer
-      width: 225px
-      height: 250px
-  .the-one
-    float: left
-    border: 5px solid $light-grey!important
+      width: 29%
+      a
+        width: 100%
+        text-align: center
+        display: inline-block
+        color: #fff
+        text-decoration: none
+      img
+        border: 5px solid $black
+        float: left
+        cursor: pointer
+        width: 100%
+    .the-one
+      float: left
+      border: 5px solid $lime-green!important
+    #container-thanks
+      clear: both
