rendering the sign up form

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,24 +30,12 @@
           %li 
             %a{:href => "/"}Menu sluiten
       #register
-        %a{:href => "/"}Registreren
+        = link_to 'Registreren', new_user_path
       #twitter
         = image_tag 'icon-twitter.png'
       #facebook
         = image_tag 'icon-facebook.png'
       #login
-        %a{:href => "google.com"} Inloggen
-        %ul
-          %li 
-            Gebruikersnaam of email adres
-          %li
-            %input 
-          %li 
-            Wachtwoord
-          %li
-            = password_field_tag 'password'
-          %li 
-            %a{:href => "/"}Wachtwoord vergeten?
-            %button Inloggen
+        
     #container-content
       = yield
